# vimlayer

./: .gitignore  .pre-commit-config.yaml  README.md  accessibility.py  config.py  hint_overlay.py  hotkey.py  main.py  mouse.py  pyproject.toml  search_ui.py  settings.py  setup.py
.github/workflows/: build.yml
docs/: mode_state_machine.md
tests/: conftest.py  test_accessibility.py  test_accessibility_logic.py  test_blocking.py  test_config.py  test_global_hotkeys.py  test_hints.py  test_hotkey.py  test_launcher.py  test_media_keys.py  test_mode_keybindings.py  test_mouse.py  test_raise_window.py  test_state_machine.py  test_watermark.py  test_window_manager.py
vimlayer/: accessibility.py  config.py  hint_overlay.py  hotkey.py  launcher.py  main.py  mouse.py  settings.py  ui.py  window_manager.py
vimmouse/: accessibility.py  config.py  hint_overlay.py  main.py  mouse.py  settings.py  window_manager.py
